fix for disabling scrollbar on 330px or less

--- a/styles.css
+++ b/styles.css
@@ -945,8 +945,8 @@ height: 35px;
         font-size: 15px;
     }
 
-    ::-webkit-scrollbar{
-        display: none;
+    html{
+        overflow: hidden;
     }
     
 
